--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "seed:grievance": "node scripts/seedGrievance.js"
   },
   "dependencies": {
+    "@emailjs/browser": "4.1.0",
+    "@google/genai": "1.4.0",
+    "firebase": "^12.9.0",
+    "firebase-admin": "^13.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "18.2.0",
-    "recharts": "2.12.7",
-    "@google/genai": "1.4.0",
-    "@emailjs/browser": "4.1.0",
-    "firebase": "^12.9.0"
+    "recharts": "2.12.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
